--- a/guidebot/package.json
+++ b/guidebot/package.json
@@ -29,6 +29,8 @@
     "enmap": "^2.0.4",
     "enmap-level": "^2.0.2",
     "moment": "^2.20.1",
-    "moment-duration-format": "^2.2.0"
+    "moment-duration-format": "^2.2.0",
+    "mongodb": "^3.0.6",
+    "monk": "^6.0.5"
   }
 }
