--- a/botapi/package.json
+++ b/botapi/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "monk": "^6.0.6"
+    "monk": "^6.0.6",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
