--- a/botapi/package.json
+++ b/botapi/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
+    "btoa": "^1.2.1",
     "cors": "^2.8.4",
+    "cross-fetch": "^2.2.2",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "monk": "^6.0.6",
+    "passport": "^0.4.0",
+    "passport-bnet": "^1.2.2",
     "ws": "^6.0.0"
   },
   "devDependencies": {
